--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,31 @@
+@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
+*, *::before, *::after {
+  box-sizing: border-box;
+  -moz-box-sizing: border-box; 
+  -webkit-box-sizing: border-box;
+}
+
+:root {
+  --shadow-color: #64646F33;
+  --accent-color: #656EC2;
+}
+
+html {
+  font-size: 10px;
+}
+
+body {
+  margin: 0;
+  padding-block: 10.7vh;
+  min-width: 100vw;
+  background-color: #fff;
+  font-family: "Fira Sans", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+header {
+  margin-bottom: 10rem;
+}
