--- a/src/components/cards/cards.css
+++ b/src/components/cards/cards.css
@@ -2,12 +2,59 @@
   width: 100%;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: 20px;
+  gap: 2rem;
 }
 
 .cards_heading {
   display: grid;
+  gap: 2rem;
   grid-column-start: 1;
   grid-column-end: 4;
   grid-template-columns: repeat(2, 1fr);
+}
+
+.card {
+  background-color: #fff;
+  box-shadow: 0px 7px 25px 0px var(--shadow-color);
+  font-size: 2.5rem;
+  padding: 20px 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 2em;
+}
+
+.cards_heading .card {
+  font-size: 3rem;
+  gap: 5.4em;
+}
+
+.card__header {
+  line-height: 1;
+}
+
+.card__footer {
+  display: flex;
+  justify-content: space-between;
+  font-family: "Montserrat";
+  font-size: 1.4rem;
+  line-height: 2.14;
+  color: #767676;
+}
+
+.status_data {
+  text-transform: capitalize;
+  font-weight: 700;
+}
+
+.alive {
+  color: #267504;
+}
+
+.dead {
+  color: #820A0A;
+}
+
+.unknown {
+  color: #bba212;
 }
