--- a/src/components/Searchbar/searchbar.css
+++ b/src/components/Searchbar/searchbar.css
@@ -1,6 +1,10 @@
 .search__form {
   width: 39.2%;
   margin-inline: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
 }
 
 .search {
@@ -16,4 +20,11 @@
 
 .search::placeholder {
   color: var(--accent-color);
+}
+
+.search__notification {
+  font-family: "Montserrat";
+  font-size: 1.6rem;
+  line-height: 1.21875;
+  width: 87.7%;
 }
