--- a/src/components/cards/cards.css
+++ b/src/components/cards/cards.css
@@ -14,7 +14,7 @@
 }
 
 .card {
-  background-color: #fff;
+  background-color: var(--bg-color);
   box-shadow: 0px 7px 25px 0px var(--shadow-color);
   font-size: 2.5rem;
   padding: 20px 30px;
@@ -22,6 +22,7 @@
   flex-direction: column;
   justify-content: space-between;
   gap: 2em;
+  height: 100%;
 }
 
 .cards_heading .card {
@@ -57,4 +58,8 @@
 
 .unknown {
   color: #bba212;
+}
+
+.date {
+  text-align: end;
 }
