--- a/src/components/cards/cards.css
+++ b/src/components/cards/cards.css
@@ -15,7 +15,7 @@
 
 .card {
   background-color: var(--bg-color);
-  box-shadow: 0px 7px 25px 0px var(--shadow-color);
+  box-shadow: 0 0.28em 1em 0 var(--shadow-color);
   font-size: 2.5rem;
   padding: 20px 30px;
   display: flex;
@@ -62,4 +62,9 @@
 
 .date {
   text-align: end;
+}
+
+.cards__buttons {
+  display: flex;
+  gap: 2rem;
 }
