--- a/src/index.css
+++ b/src/index.css
@@ -38,6 +38,13 @@ input {
   font-family: var(--main-font);
 }
 
+main .container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 3rem;
+}
+
 .header {
   margin-bottom: 7rem;
 }
@@ -46,4 +53,13 @@ input {
   width: 84%;
   max-width: 1596px;
   margin-inline: auto;
+}
+
+.btn {
+  background-color: var(--bg-color);
+  box-shadow: 0 0.28em 1em 0 var(--shadow-color);
+  font-size: 2.5rem;
+  border: 0;
+  padding: 0.5em 1em;
+  cursor: pointer;
 }
