--- a/src/components/Searchbar/searchbar.css
+++ b/src/components/Searchbar/searchbar.css
@@ -23,8 +23,50 @@
 }
 
 .search__notification {
-  font-family: "Montserrat";
+  font-family: var(--small-font);
   font-size: 1.6rem;
   line-height: 1.21875;
   width: 87.7%;
+}
+
+@media (max-width: 1200px) {
+  .search__form {
+    width: 60%;
+  }
+}
+
+@media (max-width: 768px) {
+  .search__form {
+    width: 100%;
+  }
+
+  .search {
+    font-size: 2rem;
+  }
+
+  .search__notification {
+    font-size: 1.4rem;
+  }
+}
+
+@media (max-width: 480px) {
+  .search {
+    font-size: 1.6rem;
+  }
+
+  .search__notification {
+    width: 100%;
+    text-align: center;
+    font-size: 1.2rem;
+  }
+}
+
+@media (max-width: 320px) {
+  .search {
+    font-size: 9vw;
+  }
+
+  .search__notification {
+    font-size: 6vw;
+  }
 }
