--- a/src/components/cards/cards.css
+++ b/src/components/cards/cards.css
@@ -1,13 +1,15 @@
+.cards__grid, .cards_heading {
+  gap: 2rem;
+}
+
 .cards__grid {
   width: 100%;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: 2rem;
 }
 
 .cards_heading {
   display: grid;
-  gap: 2rem;
   grid-column-start: 1;
   grid-column-end: 4;
   grid-template-columns: repeat(2, 1fr);
@@ -16,8 +18,8 @@
 .card {
   background-color: var(--bg-color);
   box-shadow: 0 0.28em 1em 0 var(--shadow-color);
-  font-size: 2.5rem;
-  padding: 20px 30px;
+  font-size: var(--header-font-size);
+  padding: 0.8em 1.2em;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -30,14 +32,10 @@
   gap: 5.4em;
 }
 
-.card__header {
-  line-height: 1;
-}
-
 .card__footer {
   display: flex;
   justify-content: space-between;
-  font-family: "Montserrat";
+  font-family: var(--small-font);
   font-size: 1.4rem;
   line-height: 2.14;
   color: #767676;
@@ -67,4 +65,72 @@
 .cards__buttons {
   display: flex;
   gap: 2rem;
+}
+
+@media (max-width: 1200px) {
+  .cards__grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .cards_heading {
+    grid-column-end: 3;
+  }
+
+  .cards_heading .card {
+    font-size: 2.6rem;
+  }
+}
+
+@media (max-width: 768px) {
+  .cards_heading .card {
+    font-size: var(--header-font-size);
+    gap: 2em;
+  }
+
+  .card__footer {
+    font-size: 1.2rem;
+  }
+}
+
+@media (max-width: 480px) {
+  .cards__grid, .cards_heading {
+    gap: 1rem;
+  }
+
+  .cards__grid {
+    grid-template-columns: repeat(1, 1fr);
+  }
+
+  .cards_heading {
+    grid-template-columns: repeat(1, 1fr);
+    grid-column-end: 2;
+  }
+}
+
+@media (max-width: 320px) {
+  .cards_heading .card, .card {
+    align-items: center;
+    text-align: center;
+  }
+
+  .card__footer {
+    flex-direction: column;
+    width: 100%;
+    gap: 0.5rem;
+    font-size: 6vw;
+  }
+
+  .card {
+    padding: 1em 0.8em;
+  }
+
+  .status, .date {
+    text-align: center;
+  }
+
+  .cards__buttons {
+    flex-direction: column;
+    width: 100%;
+    gap: 1rem;
+  }
 }
