--- a/src/components/cards/cards.css
+++ b/src/components/cards/cards.css
@@ -36,7 +36,7 @@
   display: flex;
   justify-content: space-between;
   font-family: var(--small-font);
-  font-size: 1.4rem;
+  font-size: var(--text-font-size);
   line-height: 2.14;
   color: #767676;
 }
@@ -86,10 +86,6 @@
     font-size: var(--header-font-size);
     gap: 2em;
   }
-
-  .card__footer {
-    font-size: 1.2rem;
-  }
 }
 
 @media (max-width: 480px) {
@@ -117,7 +113,6 @@
     flex-direction: column;
     width: 100%;
     gap: 0.5rem;
-    font-size: 6vw;
   }
 
   .card {
