--- a/src/components/cards/cards.css
+++ b/src/components/cards/cards.css
@@ -25,11 +25,16 @@
   justify-content: space-between;
   gap: 2em;
   height: 100%;
+  transition: transform 0.5s ease;
 }
 
 .cards_heading .card {
   font-size: 3rem;
   gap: 5.4em;
+}
+
+.card__header {
+  transition: color 0.5s ease;
 }
 
 .card__footer {
@@ -65,6 +70,16 @@
 .cards__buttons {
   display: flex;
   gap: 2rem;
+}
+
+@media (hover:hover) {
+  .card:hover {
+    transform: translateY(-0.3em);
+  }
+
+  .card:hover .card__header {
+    color: var(--accent-color);
+  }
 }
 
 @media (max-width: 1200px) {
