--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,7 @@
 
 html {
   font-size: 10px;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -30,6 +31,7 @@ body {
   font-weight: 400;
   font-style: normal;
   color: var(--text-color);
+  position: relative;
 }
 
 ul {
@@ -45,6 +47,10 @@ h2 {
   font-weight: 400;
   margin: 0;
   text-transform: capitalize;
+}
+
+button {
+  cursor: pointer;
 }
 
 a {
