--- a/src/components/Searchbar/searchbar.css
+++ b/src/components/Searchbar/searchbar.css
@@ -1,4 +1,4 @@
-.search__form {
+.search {
   width: 39.2%;
   margin-inline: auto;
   display: flex;
@@ -7,7 +7,7 @@
   gap: 1rem;
 }
 
-.search {
+.search__input {
   width: 100%;
   font-size: 2.2rem;
   font-weight: 700;
@@ -18,7 +18,7 @@
   border: 0;
 }
 
-.search::placeholder {
+.search__input::placeholder {
   color: var(--accent-color);
 }
 
@@ -30,17 +30,17 @@
 }
 
 @media (max-width: 1200px) {
-  .search__form {
+  .search {
     width: 60%;
   }
 }
 
 @media (max-width: 768px) {
-  .search__form {
+  .search {
     width: 100%;
   }
 
-  .search {
+  .search__input {
     font-size: 2rem;
   }
 
@@ -50,7 +50,7 @@
 }
 
 @media (max-width: 480px) {
-  .search {
+  .search__input {
     font-size: 1.6rem;
   }
 
@@ -62,7 +62,7 @@
 }
 
 @media (max-width: 320px) {
-  .search {
+  .search__input {
     font-size: 9vw;
   }
 
